    Chance a Weird Tree spawns in the Unknown Dimension was changed from 1/500 to 1/2000.
      - But this doesn't mean anything right now because the Unknown Dimension doesn't exist.
    Now that we have a standard generator to power your machines, you won't need as
      many Energy Crystals. Changed the default tries to generate Gem Ore from 4 to 3.
FIXED:
  Finally added the ability to get those Advancements that you couldn't get before,
    such as Fire Laser, Fire Laser the Maximum Distance, Portal, World Destroyer,
    and Convert a Thousand Gems.
REMOVED:
  Removed the ability to move some Overpowered items into other Creative Tabs.
  Removed Unknown Technology item.



v1.3.4 - December 28, 2020
  Major code optimizations and maintenance.
  Fix Laser Distance or Energy not saving on world reload.
  Energy stored in Batteries is now balanaced across all batteries on the
    Energy Network.
  Fixed several errors with the Universal Energy Interface.
  Batteries that are removed now redistribute any leftover energy to other
    connected batteries.
  Fix Universal Energy Interface not depositing energy into Energy
    Storage Containers.
  Fix machines receiving double energy if you had an Energy Storage Container
    on your energy network.
  You can now specify the Laser maximum receive variable in the config.
  Fixed a rare crash that would occur if you reloaded the world while a machine
    was working on its last item.
  Fix message telling players the black hole is not allowed in this dimension
    was displaying twice. - Error since v1.3.
  Added an alternate crafting recipe for the Fusion Energy Converter.
  Fixed a few recipe advancements not working. But nobody cares about that.



v1.3.3 - October 13, 2020
  Fixed Inverter crash. sigh.
  Added an alternate crafting recipe for the Caution Block.
  No longer displays Portal warning message as the Unknown Dimension
    doesn't exist in the 1.14 and 1.15 versions.



v1.3.2 - October 1, 2020